--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,6 +2,6 @@ version: 3
 tasks:
   screenshots:
     cmds:
-      - freeze -W 700 -H 800 --config full --output ./example/1.png --execute "./example/run -h"
-      - freeze -W 700 -H 400 --config full --output ./example/2.png --execute "./example/run -e"
-      - freeze -W 700 -H 400 --config full --output ./example/3.png --execute "./example/run --this-flag-doesnt-exist"
+      - freeze -W 700 -H 800 --config full --output ./example/1.svg --execute "./example/run -h"
+      - freeze -W 700 -H 400 --config full --output ./example/2.svg --execute "./example/run -e"
+      - freeze -W 700 -H 400 --config full --output ./example/3.svg --execute "./example/run --this-flag-doesnt-exist"
